# lab3-Gas-processes

./: AbstractProcess.cpp  AbstractProcess.h  CMakeLists.txt  IsoBarProcess.cpp  IsoBarProcess.h  IsoChorPocess.cpp  IsoChorPocess.h  README.md  main.cpp
